--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "express-validator": "^7.0.1",
+    "googleapis": "^120.0.0",
     "helmet": "^7.0.0",
     "http-errors": "^2.0.0",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.3.1",
     "nanoid": "^4.0.2",
+    "nodemailer": "^6.9.3",
     "request": "^2.88.2",
     "uuid": "^9.0.0"
   },
